[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/themes/kenney/kenney.tres" type="Theme" id=1]
[ext_resource path="res://resources/themes/kenney/panel_texture.tres" type="StyleBox" id=2]
[ext_resource path="res://scripts/controllers/BuildingInspectorController.gd" type="Script" id=3]
[ext_resource path="res://sprites/buildings/logistics-drone-factory.png" type="Texture" id=4]
[ext_resource path="res://resources/fonts/kenney_pixel_small.tres" type="DynamicFont" id=5]
[ext_resource path="res://ui/elements/resource-item.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/elements/buildable-item.tscn" type="PackedScene" id=7]

[node name="BuildingInspector" type="PanelContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 251.752
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingContent" type="HBoxContainer" parent="."]
margin_left = 8.33924
margin_top = 8.33924
margin_right = 866.339
margin_bottom = 224.339
custom_constants/separation = 20
alignment = 1

[node name="BuildingStatus" type="VBoxContainer" parent="BuildingContent"]
margin_right = 238.0
margin_bottom = 216.0
rect_min_size = Vector2( 150, 0 )
alignment = 1

[node name="BuildingName" type="Label" parent="BuildingContent/BuildingStatus"]
margin_right = 238.0
margin_bottom = 24.0
text = "Logistics Drone Factory"
align = 1

[node name="BuildingIcon" type="TextureRect" parent="BuildingContent/BuildingStatus"]
margin_left = 36.0
margin_top = 28.0
margin_right = 201.0
margin_bottom = 104.0
size_flags_horizontal = 4
texture = ExtResource( 4 )

[node name="ProgressContainer" type="VBoxContainer" parent="BuildingContent/BuildingStatus"]
margin_top = 108.0
margin_right = 238.0
margin_bottom = 160.0

[node name="ProgressLabel" type="Label" parent="BuildingContent/BuildingStatus/ProgressContainer"]
margin_right = 238.0
margin_bottom = 24.0
text = "Progress"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="BuildingContent/BuildingStatus/ProgressContainer"]
margin_top = 28.0
margin_right = 238.0
margin_bottom = 52.0
rounded = true

[node name="HPContainer" type="VBoxContainer" parent="BuildingContent/BuildingStatus"]
margin_top = 164.0
margin_right = 238.0
margin_bottom = 216.0

[node name="HPLabel" type="Label" parent="BuildingContent/BuildingStatus/HPContainer"]
margin_right = 238.0
margin_bottom = 24.0
text = "HP"
align = 1

[node name="HPBar" type="ProgressBar" parent="BuildingContent/BuildingStatus/HPContainer"]
margin_top = 28.0
margin_right = 238.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 24 )
rounded = true
percent_visible = false

[node name="HPAmountContainer" type="CenterContainer" parent="BuildingContent/BuildingStatus/HPContainer/HPBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -5.0
margin_bottom = -4.0

[node name="HPAmount" type="Label" parent="BuildingContent/BuildingStatus/HPContainer/HPBar/HPAmountContainer"]
margin_left = 99.0
margin_right = 130.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 5 )
text = "10/10"

[node name="ResourceItems" type="VBoxContainer" parent="BuildingContent"]
margin_left = 258.0
margin_right = 408.0
margin_bottom = 216.0
rect_min_size = Vector2( 150, 0 )
alignment = 1

[node name="resource-item-metal" parent="BuildingContent/ResourceItems" instance=ExtResource( 6 )]
margin_top = 26.0
margin_bottom = 50.0

[node name="resource-item-metal2" parent="BuildingContent/ResourceItems" instance=ExtResource( 6 )]
margin_top = 54.0
margin_bottom = 78.0

[node name="resource-item-metal3" parent="BuildingContent/ResourceItems" instance=ExtResource( 6 )]
margin_top = 82.0
margin_bottom = 106.0

[node name="resource-item-metal4" parent="BuildingContent/ResourceItems" instance=ExtResource( 6 )]
margin_top = 110.0
margin_bottom = 134.0

[node name="resource-item-metal5" parent="BuildingContent/ResourceItems" instance=ExtResource( 6 )]
margin_top = 138.0
margin_bottom = 162.0

[node name="resource-item-metal6" parent="BuildingContent/ResourceItems" instance=ExtResource( 6 )]
margin_top = 166.0
margin_bottom = 190.0

[node name="BuildableItems" type="VBoxContainer" parent="BuildingContent"]
margin_left = 428.0
margin_right = 656.0
margin_bottom = 216.0
alignment = 1

[node name="buildable-item" parent="BuildingContent/BuildableItems" instance=ExtResource( 7 )]
margin_top = 38.0
margin_right = 228.638
margin_bottom = 106.736

[node name="buildable-item2" parent="BuildingContent/BuildableItems" instance=ExtResource( 7 )]
margin_top = 110.0
margin_right = 228.638
margin_bottom = 178.736

[node name="BuildingOptions" type="VBoxContainer" parent="BuildingContent"]
margin_left = 676.0
margin_right = 858.0
margin_bottom = 216.0
alignment = 1

[node name="auto-build" type="CheckButton" parent="BuildingContent/BuildingOptions"]
margin_top = 83.0
margin_right = 182.638
margin_bottom = 133.736
text = "Auto Build"
